--- a/input.scss
+++ b/input.scss
@@ -7,6 +7,11 @@
 	margin: 0.5rem 0 1rem 0;
 }
 
+.password-meter {
+	margin-top: 10px;
+	border-radius: 4px !important;
+}
+
 .clickable:hover{
 	cursor:pointer;
 }
