--- a/carousel.scss
+++ b/carousel.scss
@@ -61,21 +61,14 @@ $max_slides: 20;
         .slider-next {
             width: 4rem;
             height: 4rem;
+			font-size: 1.5rem;
             // TODO: base on theme-specific settings
+			color: var(--color);
             background: #fff;
             box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
             display: flex;
             align-items: center;
             justify-content: center;
-            // icon
-            > svg {
-                width: 1.25rem;
-                height: 1.25rem;
-
-                path {
-                    fill: get_palette(linkColor);
-                }
-            }
         }
     }
 
