--- a/IconSelector/IconSelect.scss
+++ b/IconSelector/IconSelect.scss
@@ -5,6 +5,10 @@
         font-size: 24px;
     }
 
+    .icon-container {
+        overflow-y:auto;
+    }
+
     .icon-select-modal {
         .icon-tile {
             border: 1px solid lightgrey;
@@ -20,5 +24,9 @@
                 font-size: 30px;
             }
         }
+    }
+
+    .header-container {
+        width: 100%;
     }
 }
