--- a/carousel.scss
+++ b/carousel.scss
@@ -1,19 +1,3 @@
-// maximum number of slides considered when updating opacity
-$max_slides: 20;
-
-@mixin opacityCheck($offset, $slidesPerScreen) {
-    $nthOffset: $slidesPerScreen + 1 + $offset;
-
-    &[data-offset='#{$offset}'] {
-
-        .content-item:nth-child(-n+#{$offset}),
-        .content-item:nth-child(n+#{$nthOffset}) {
-            opacity: .5;
-        }
-
-    }
-}
-
 .carousel {
 
     .slider {
@@ -78,17 +62,10 @@ $max_slides: 20;
         margin-bottom: 0;
 
         &.toggle-opacity {
-
-            @for $offset from 0 through $max_slides {
-                @include opacityCheck($offset, 2);
-            }
-
-            @media only screen and (max-width: 991px) {
-                @for $offset from 0 through $max_slides {
-                    @include opacityCheck($offset, 1);
-                }
-            }
-
+			
+			.offscreen-item{
+				opacity: 0.5;
+			}
         }
     }
 
