--- a/SlippyMap.scss
+++ b/SlippyMap.scss
@@ -25,8 +25,9 @@
 		position: absolute;
 		
 		> .spot-marker {
-			margin-left: -50%;
-			margin-top: -100%;
+			transform: translateX(-50%) translateY(-50%);
+			width: 110px;
+			height: 126px;
 			background: none;
 			padding: 0;
 			border: none;
@@ -37,24 +38,63 @@
 			> .fal {
 				color: white;
 				position: absolute;
-				top: 35%;
-				left: 41%;
+				position: absolute;
+				width: 100%;
+				height: 90%;
+				left: 0;
+				top: 0;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				font-size: 2rem;
 			}
 			
 		}
 		
 		> .open-marker {
 			position: absolute;
-			visibility: none;
+			//visibility: hidden;
 			z-index: -1;
 			padding: 1rem 3rem 1rem 1rem;
-			border-radius: 0.5rem;
+			border-radius: 1rem;
 			right: 100%;
 			top: -50%;
 			background: white;
 			color: black;
 			opacity: 0;
 			transition: opacity 0.5s;
+			min-width: 250px;
+
+			> h1 {
+				font-size: 1.5rem;
+				font-weight: bold !important;
+			}
+
+			> a {
+				font-size: 14px;
+				font-weight: bold;
+				display: inline-flex;
+				align-items: center;
+				color: #000;
+				transition: all .2s ease;
+
+				&::after {
+					content: "\f138";
+					margin-left: 12px;
+				    font-weight: 300;
+					font-family: "Font Awesome 5 Pro";
+					font-size: 24px;
+				}
+
+				&:hover {
+					color: #513f7d;
+
+					.hotspot-cta {
+						text-decoration: underline;
+					}
+				}
+			}
+
 		}
 		
 		&.is-open {
