--- a/image.scss
+++ b/image.scss
@@ -21,4 +21,10 @@
 		margin: .5rem 0 .5rem .5rem ;
 	}
 
+	&.image-center {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
 }
