--- a/Default/Default.scss
+++ b/Default/Default.scss
@@ -196,11 +196,13 @@ html.admin {
 		label {
 			color: #8e9297;
 		}
-
+		
+		/*
 		a {
 			color: white;
 		}
-
+		*/
+		
 		.permission-grid {
 			background: #222;
 		}
