Context menu right click style fixes.

--- a/RichEditor/RichEditor.scss
+++ b/RichEditor/RichEditor.scss
@@ -1,5 +1,11 @@
 .canvas-editor-popups{
+
+	.context-menu {
+		max-height: 300px;
+		overflow-y: auto;
+	}
 	
+
 	.module-select-modal, .module-link-selection-modal{
 		.module-group{
 			margin-bottom: 10px;
