--- a/global.mq.16.scss
+++ b/global.mq.16.scss
@@ -177,7 +177,7 @@ $socialstack_media_queries: (
     ),
     large: (
       from: 412px,
-      to: 767px
+      to: 752px // discounts Galaxy Tab S7 (753px)
     )
   ),
   tablet: (
