--- a/global.variables.5.scss
+++ b/global.variables.5.scss
@@ -341,7 +341,7 @@ $base_font_size: 16 !default; // in px
 // common functions defined as early as possible
 @function strip_unit($number) {
   @if type-of($number) == 'number' and not unitless($number) {
-    @return $number / ($number * 0 + 1);
+    @return math.div($number, $number * 0 + 1);
   }
 
   @return $number;
@@ -352,40 +352,40 @@ $base_font_size: 16 !default; // in px
 }
 
 @function px_to_em($px) {
-    @return 0em + $px / $base_font_size;
+    @return math.div(0em + $px, $base_font_size);
 }
 
 @function px_to_rem($px) {
-    @return 0rem + $px / $base_font_size;
+    @return math.div(0rem + $px, $base_font_size);
 }
 
 @function pt_to_rem($pt) {
-  $PX_PER_PT: 1 + 1/3;
-  @return 0rem + ($pt * $PX_PER_PT) / $base_font_size;
+  $PX_PER_PT: 1 + math.div(1, 3);
+  @return math.div(0rem + ($pt * $PX_PER_PT), $base_font_size);
 }
 
 @function cm_to_rem($cm) {
-  $PX_PER_CM: 96 / 2.54;
-  @return 0rem + ($cm * $PX_PER_CM) / $base_font_size;
+  $PX_PER_CM: math.div(96, 2.54);
+  @return math.div(0rem + ($cm * $PX_PER_CM), $base_font_size);
 }
 
 @function mm_to_rem($mm) {
-  $PX_PER_MM: 96 / 25.4;
-  @return 0rem + ($mm * $PX_PER_MM) / $base_font_size;
+  $PX_PER_MM: math.div(96, 25.4);
+  @return math.div(0rem + ($mm * $PX_PER_MM), $base_font_size);
 }
 
 @function q_to_rem($q) {
-  $PX_PER_Q: 96 / 101.6;
-  @return 0rem + ($q * $PX_PER_Q) / $base_font_size;
+  $PX_PER_Q: math.div(96, 101.6);
+  @return math.div(0rem + ($q * $PX_PER_Q), $base_font_size);
 }
 
 @function in_to_rem($in) {
-  @return 0rem + ($in * 96) / $base_font_size;
+  @return math.div(0rem + ($in * 96), $base_font_size);
 }
 
 @function pc_to_rem($pc) {
-  $PX_PER_PC: 96 / 6;
-  @return 0rem + ($pc * $PX_PER_PC) / $base_font_size;
+  $PX_PER_PC: math.div(96, 6);
+  @return math.div(0rem + ($pc * $PX_PER_PC), $base_font_size);
 }
 
 // convert absolute unit to rem
@@ -559,7 +559,7 @@ $ss_form_field_font_weight: normal !default;
 $ss_form_field_padding_x: 16 !default;
 $ss_form_field_padding_y: 9 !default;
 $ss_form_field_font_size: 14 !default;
-$ss_form_field_border_radius: $ss_form_field_font_size / 2 !default;
+$ss_form_field_border_radius: math.div($ss_form_field_font_size, 2) !default;
 $ss_form_field_icon: $ss_form_field_fg !default; // used for select dropdown icon
 $ss_form_field_background_position: right .5rem top 50% !default;
 $ss_form_field_background_size: 1.5em !default;
