Improved form to create new paymentIntent when products prop changes

--- a/StripePaymentForm.scss
+++ b/StripePaymentForm.scss
@@ -1,5 +1,5 @@
 .stripe-payment-form {
-	.submit-btn, .stripe-payment-form-error {
+	.submit-btn, .stripe-payment-form-error, .alert {
 		margin-top: 1rem;
 	}
 }
