outdated get_value() referenced replaced

--- a/Paginator.scss
+++ b/Paginator.scss
@@ -1,4 +1,4 @@
-$paginator_justify_content: get_value(justify-content, bootstrap, pagination);
+$paginator_justify_content: center;
 
 .paginator {
 	width: 100%;
