--- a/Peers/Peers.scss
+++ b/Peers/Peers.scss
@@ -184,7 +184,7 @@ $meeting_padding_top: 3rem;
 }
 
 // iPad overrides
-html.device-ipad {
+@include mq_ipad {
 
     @media only screen and (orientation: portrait) {
 
@@ -218,7 +218,7 @@ html.device-ipad {
 }
 
 // mobile overrides
-html.device-mobile {
+@include mq_mobile {
 
 	@media only screen and (orientation: portrait) {
 
