--- a/CalendarCompact.scss
+++ b/CalendarCompact.scss
@@ -65,7 +65,7 @@
 								content: "";
 								flex: 1 1;
 								border-bottom: 1px solid rgb(199,199,199);
-								margin: auto -15px auto 15px;
+								margin: auto 0 auto 15px;
 							}
 						}
 
