--- a/Tab.scss
+++ b/Tab.scss
@@ -5,7 +5,6 @@
     &::before,
     &::after { 
         position: absolute;
-        font-family: $installed_font;
         font-size: 1rem;
         border-radius: 50%;
         right: 0;
@@ -19,15 +18,14 @@
 
     &::before {
         content: attr(data-critical-total);
-        background-color: $nhs_red;
+        background-color: red;
         color: #fff;
         top: 0rem;
     }
 
     &::after {
         content: attr(data-standard-total);
-        font-family: $installed_font;
-        background-color: $nhs_yellow;
+        background-color: yellow;
         color: #000;
         top: 2rem;
     }
@@ -87,9 +85,8 @@
             &::after {
                 content: attr(data-total);
                 position: absolute;
-                font-family: $installed_font;
                 font-size: 1rem;
-                background-color: $nhs_red;
+                background-color: red;
                 color: #fff;
                 border-radius: 50%;
                 right: -1rem;
